[project]
name = "medical-image-torch"
version = "0.1.0"
description = "A project for dental image analysis using Pytorch and a modern MLOps stack"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "mlflow>=3.5.1",
    "hydra-core>=1.3.2",
    "great-expectations>=1.8.0",
    "monai>=1.5.1",
    "simpleitk>=2.5.2",
    "pydicom>=3.0.1",
    "nibabel>=5.3.2",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "jupyterlab>=4.4.10",
    "grafana>=0.0.1",
    "fastapi>=0.120.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "uv>=0.9.5",
    "dvc[s3]>=3.63.0",
    "evidently>=0.7.15",
    "ultralytics>=8.3.221",
    "opencv-python>=4.11.0.86",
    "psycopg2>=2.9.11",
    "pillow>=12.0.0",
    "kaggle>=1.7.4.5",
    "ptl>=0.3.0",
]
