[project]
name = "medical-image-torch"
version = "0.1.0"
description = "A project for dental image analysis using Pytorch and a modern MLOps stack"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dvc[s3]>=3.63.0",
    "evidently>=0.7.15",
    "fastapi>=0.120.0",
    "grafana>=0.0.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.10",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "monai>=1.5.1",
    "networkx>=3.5",
    "nibabel>=5.3.2",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2>=2.9.11",
    "ptl>=0.3.0",
    "pydicom>=3.0.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.2",
    "sqlalchemy>=2.0.44",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.221",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
